--- a/part1/part1.csproj
+++ b/part1/part1.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="displayRecipe.cs" />
+    <Compile Include="Ingredients.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="recMethods.cs" />
+    <Compile Include="Recipe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
